--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.0-364.0.dev <3.0.0'
+  sdk: '>=2.19.0-146.2.beta <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,6 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_platform_widgets: ^2.0.0
+  firebase_core: ^2.1.1
+  cloud_firestore: ^4.0.4
+  uuid: ^3.0.6
+  firebase_database: ^10.0.4
+  firebase_storage: ^11.0.4
+  bloc: ^8.1.0
+  flutter_bloc: ^8.1.1
+  nepali_address: ^1.0.0
 
 dev_dependencies:
   flutter_test:
