--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
   nepali_address: ^1.0.0
+  open_file: ^3.2.1
+  pdf: ^3.9.0
 
 dev_dependencies:
   flutter_test:
